[tool.poetry]
name = "twitter-ifttt-bluesky"
version = "0.1.0"
description = ""
authors = ["hito_horobe <hito-horobe.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"
requests = "^2.32.5"
bs4 = "^0.0.2"
requests-cache = "^1.2.1"
pytest-mock = "^3.15.1"
pillow = "^12.0.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.14.5"
pre-commit = "^4.3.0"
mypy = "^1.17.1"


[tool.ruff]
exclude = [".venv", ".pytest_cache", ".git"]

[tool.ruff.lint]
select = ["I", "N"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
