[project]
name = "twitter-ifttt-bluesky"
version = "0.1.0"
description = ""
authors = [{name = "hito_horobe"}]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi>=0.135.1,<0.137",
    "uvicorn>=0.41.0,<0.42",
    "pydantic>=2.12.5,<3",
    "requests>=2.33.0,<3",
    "bs4>=0.0.2,<0.0.3",
    "requests-cache>=1.2.1,<2",
    "pillow>=12.1.1,<13",
    "httpx>=0.28.1,<0.29",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
    "pytest-mock>=3.15.1,<4",
    "ruff>=0.14.10,<0.16",
    "pre-commit>=4.5.1,<5",
    "mypy>=1.19.1,<2",
]


[tool.ruff]
exclude = [".venv", ".pytest_cache", ".git"]

[tool.ruff.lint]
select = ["I", "N"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
